Check arguments of methods for null safety for ReflectionSupport
#1670