@@ -13,11 +13,12 @@ package org.junit.platform.commons.support;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.platform.commons.support.PreconditionViolationChecker.assertPreconditionViolationException;
+import static org.junit.platform.commons.support.PreconditionViolationChecker.assertPreconditionViolationExceptionForString;
 
 import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
@@ -45,6 +46,13 @@ class ReflectionSupportTests {
 		assertEquals(ReflectionUtils.loadClass("java.io.Bits"), ReflectionSupport.loadClass("java.io.Bits"));
 	}
 
+	@SuppressWarnings("deprecation")
+	@Test
+	void loadClassPreconditions() {
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.loadClass(null));
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.loadClass(""));
+	}
+
 	@Test
 	void tryToLoadClassDelegates() {
 		assertEquals(ReflectionUtils.tryToLoadClass("-").toOptional(),
@@ -54,11 +62,17 @@ class ReflectionSupportTests {
 		assertEquals(ReflectionUtils.tryToLoadClass("java.io.Bits"), ReflectionSupport.tryToLoadClass("java.io.Bits"));
 	}
 
+	@Test
+	void tryToLoadClassPreconditions() {
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.tryToLoadClass(null));
+		assertPreconditionViolationExceptionForString("Class name", () -> ReflectionSupport.tryToLoadClass(""));
+	}
+
 	@TestFactory
 	List<DynamicTest> findAllClassesInClasspathRootDelegates() throws Throwable {
 		List<DynamicTest> tests = new ArrayList<>();
 		List<Path> paths = new ArrayList<>();
-		paths.add(Paths.get(".").toRealPath());
+		paths.add(Path.of(".").toRealPath());
 		paths.addAll(ReflectionUtils.getAllClasspathRootDirectories());
 		for (Path path : paths) {
 			URI root = path.toUri();
@@ -74,6 +88,17 @@ class ReflectionSupportTests {
 	}
 
 	@Test
+	void findAllClassesInClasspathRootPreconditions() {
+		URI path = Path.of(".").toUri();
+		assertPreconditionViolationException("root",
+			() -> ReflectionSupport.findAllClassesInClasspathRoot(null, allTypes, allNames));
+		assertPreconditionViolationException("class predicate",
+			() -> ReflectionSupport.findAllClassesInClasspathRoot(path, null, allNames));
+		assertPreconditionViolationException("name predicate",
+			() -> ReflectionSupport.findAllClassesInClasspathRoot(path, allTypes, null));
+	}
+
+	@Test
 	void findAllClassesInPackageDelegates() {
 		assertThrows(PreconditionViolationException.class,
 			() -> ReflectionUtils.findAllClassesInPackage("void.return.null", allTypes, allNames));
@@ -85,9 +110,29 @@ class ReflectionSupportTests {
 	}
 
 	@Test
+	void findAllClassesInPackagePreconditions() {
+		assertPreconditionViolationException("package name",
+			() -> ReflectionSupport.findAllClassesInPackage(null, allTypes, allNames));
+		assertPreconditionViolationException("class predicate",
+			() -> ReflectionSupport.findAllClassesInPackage("org.junit", null, allNames));
+		assertPreconditionViolationException("name predicate",
+			() -> ReflectionSupport.findAllClassesInPackage("org.junit", allTypes, null));
+	}
+
+	@Test
 	void findAllClassesInModuleDelegates() {
 		assertEquals(ReflectionUtils.findAllClassesInModule("org.junit.platform.commons", allTypes, allNames),
 			ReflectionSupport.findAllClassesInModule("org.junit.platform.commons", allTypes, allNames));
+	}
+
+	@Test
+	void findAllClassesInModulePreconditions() {
+		assertPreconditionViolationExceptionForString("Module name",
+			() -> ReflectionSupport.findAllClassesInModule(null, allTypes, allNames));
+		assertPreconditionViolationException("class predicate",
+			() -> ReflectionSupport.findAllClassesInModule("org.junit.platform.commons", null, allNames));
+		assertPreconditionViolationException("name predicate",
+			() -> ReflectionSupport.findAllClassesInModule("org.junit.platform.commons", allTypes, null));
 	}
 
 	@Test
@@ -101,4 +146,19 @@ class ReflectionSupportTests {
 				ReflectionUtils.HierarchyTraversalMode.TOP_DOWN),
 			ReflectionSupport.findMethods(ReflectionSupportTests.class, allMethods, HierarchyTraversalMode.TOP_DOWN));
 	}
+
+	@Test
+	void findMethodsPreconditions() {
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findMethods(null, allMethods, HierarchyTraversalMode.BOTTOM_UP));
+		assertPreconditionViolationException("Class",
+			() -> ReflectionSupport.findMethods(null, allMethods, HierarchyTraversalMode.TOP_DOWN));
+		assertPreconditionViolationException("Predicate",
+			() -> ReflectionSupport.findMethods(ReflectionSupportTests.class, null, HierarchyTraversalMode.BOTTOM_UP));
+		assertPreconditionViolationException("Predicate",
+			() -> ReflectionSupport.findMethods(ReflectionSupportTests.class, null, HierarchyTraversalMode.TOP_DOWN));
+		assertPreconditionViolationException("HierarchyTraversalMode",
+			() -> ReflectionSupport.findMethods(ReflectionSupportTests.class, allMethods, null));
+	}
+
 }
